# cs414.holmes

./: README.md
Assignment01/: Peano.ml  Pruning.ml
Assignment02/: Parse Trees.txt  RegularExpressions.cpp  Rose.ml
Assignment03/: Assignment3.2.cpp  Assignment3.3.cpp
Assignment04/: Assignment4.2.cpp
Assignment05/: Asg05.ml  Assignment05.cpp
Assignment06/C++/: Monad.cpp  MonadQ3.cpp
Assignment06/Ocaml/: Monad.ml
Assignment07/C++/: ConsoleApplication11.cpp
Assignment07/OCaml/: Objects.ml
module01/treedemo/: dune-project  treedemo.opam
module01/treedemo/avl/: avl.ml  dune
module01/treedemo/src/: dune  treedemo.ml
module01/treedemo/test/: dune
module01/treedemo/tree/: dune  tree.ml
